--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Tic-tac-toe JS</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="app">raz dwa trzy</div>
-    <script type="module" src="/main.js"></script>
+
+    <div id="gameboard"></div>
+    <p id="info"></p>
+    
+    <script src="app.js"></script>
   </body>
 </html>
